# HIDeous

./: .gitignore  AGENTS.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HIDeous.csproj  HIDeous.sln  LICENSE  Program.cs  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
docs/: KEYPRESS_FLOW.md
src/app/: CMakeLists.txt  Hideous.vcxproj  Hideous.vcxproj.filters  entry_point.cpp  gui.cpp  gui.h  hideous_app.cpp  hideous_app.h  intercept.cpp  intercept.h  resource.h  resources.rc  settings.cpp  settings.h
src/app/processing/: macro_executor.cpp  macro_executor.h  raw_input_handler.cpp  raw_input_handler.h
src/app/processing/commands/: keys_command.cpp  keys_command.h  profile_command.cpp  profile_command.h  run_command.cpp  run_command.h  text_command.cpp  text_command.h
src/app/ui/: gui_types.h  main_window.cpp  main_window.h  taskbar_icon.cpp  taskbar_icon.h
src/app/ui/components/: device_list.cpp  device_list.h  profile_selector.cpp  profile_selector.h
src/assets/: settings.ini
src/common/: CMakeLists.txt  constants.h  crypto.cpp  crypto.h  log_util.cpp  log_util.h  logging.cpp  logging.h  settings.cpp  settings.h  shared.cpp  shared.h  shared_data.cpp  shared_data.h
src/common/config/: settings_manager.cpp  settings_manager.h
src/common/input/: key_mapping.cpp  key_mapping.h
src/common/utils/: constants.h  crypto.cpp  logging.cpp  string_utils.cpp  string_utils.h
src/dll/: CMakeLists.txt  hideous_hook.cpp  hideous_hook.def  hideous_hook.h  hideous_hook.vcxproj  hideous_hook.vcxproj.filters
src/hook_dll/: CMakeLists.txt  dll_main.cpp  hideous_hook.def  hideous_hook.h
